# movie-bag

./: .env.test  app.py  pyproject.toml
database/: models.py
resources/: auth.py  movies.py  reset_password.py  routes.py
services/: mail_service.py
tests/: test_create_movie.py  test_signup.py
