[tool.poetry]
name = "movie-bag"
version = "0.1.0"
description = ""
authors = ["Benny Chan <bennyx93@tamu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
flask-mongoengine = "^1.0.0"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
